--- a/frontend/src/modules/admin/user-management/user-management-component/user-management-component.css
+++ b/frontend/src/modules/admin/user-management/user-management-component/user-management-component.css
@@ -16,6 +16,12 @@
     width: 80px;
 }
 
+.yes-button-edit {
+    background-color: green !important;
+    border: green !important;
+    width: 80px;
+}
+
 .no-button {
     background-color: #606060 !important;
     border: #606060 !important;
