--- a/frontend/src/modules/admin/content-management/add-quiz/add-quiz-component/add-quiz-component.css
+++ b/frontend/src/modules/admin/content-management/add-quiz/add-quiz-component/add-quiz-component.css
@@ -1,1 +1,14 @@
-/**/
+.quiz-wrapper {
+    min-width: max-content;
+    width: 40%;
+}
+
+.quiz-header {
+    background-color: #626ed4;
+}
+
+.submit-btn {
+    min-width: max-content;
+    padding-left: 7%;
+    padding-right: 7%;
+}
